# taskwarrior-flutter

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.android  Dockerfile.linux  License.md  Progress.md  README.md  build_itchelper  docker-compose.yaml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  index.html  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  contribution-template.md  feature.yaml
.github/workflows/: android-release.yml  android_release.yml  fdroidupdateci.yml  flutterci.yml  nightlydepolyci.yml  update.yml
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
assets/: .taskrc
assets/.task/: ca.cert.pem  first_last.cert.pem  first_last.key.pem
ios/Runner/: AppDelegate.swift  Info.plist  RunnerDebug.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/TaskWarriorWidgets/: AppIntent.swift  ChartWidget.swift  Info.plist  TaskWarriorWidgets.swift  TaskWarriorWidgetsBundle.swift
ios/tc_helper.xcframework/: Info.plist
lib/: api_service.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
metadata/: com.ccextractor.taskwarrior.nightly.yml  com.ccextractor.taskwarriorflutter.nightly.yml  com.ccextractor.taskwarriorflutter.yml
repo/: categories.txt  entry.json  index-v1.json  index-v2.json  index.html  index.xml
rust/: Cargo.toml  README.md
rust/src/: api.rs  frb_generated.rs  lib.rs
test/: api_service_test.dart  api_service_test.mocks.dart  main_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+492 files in other folders)
