[package]
name = "tc_helper"
version = "0.1.0"
edition = "2024"

[lib]
name="tc_helper"
crate-type=["staticlib","cdylib"]

[dependencies]
taskchampion = "2.0.3"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
uuid = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flutter_rust_bridge = "=2.11.1"           # Rust runtime bridge
flutter_rust_bridge_macros = "2.11.1"    # Procedural macros support

[build-dependencies]
flutter_rust_bridge_codegen = "2.11.1"  # Code generator CLI
